--- a/get-started/quick-start.adoc
+++ b/get-started/quick-start.adoc
@@ -22,19 +22,13 @@ link:../get-started/prerequisites.html[Ensure your environment meets these requi
  
 
 
-.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-2.png[Two] Set up the reports service
+
+.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-2.png[Three] What's next?
 
 
 [role="quick-margin-para"]
-link:../get-started/setup.html[Complete steps to set up the service^].
 
-
-
-.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-3.png[Three] What's next?
-
-
-[role="quick-margin-para"]
-After you set up the service, here's what you might do next. 
+Here's what you might do next. 
 
 [role="quick-margin-list"]
 * link:../use/report-create.html[Create a report^].
