--- a/get-started/quick-start.adoc
+++ b/get-started/quick-start.adoc
@@ -18,7 +18,7 @@ Here's an overview of the steps needed to get started with BlueXP migration repo
 .image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-1.png[One] Review prerequisites 
 
 [role="quick-margin-para"]
-link:../get-started/prerequisites.html[Ensure your environment meets these requirements^].
+link:../get-started/prerequisites.html[Ensure your environment meets these requirements].
  
 
 
@@ -31,9 +31,9 @@ link:../get-started/prerequisites.html[Ensure your environment meets these requi
 Here's what you might do next. 
 
 [role="quick-margin-list"]
-* link:../use/report-create.html[Create a report^].
-* link:../use/report-sample.html[View a report sample^].
-* link:../use/report-delete.html[Delete a report^].
+* link:../use/report-create.html[Create a report].
+* link:../use/report-sample.html[View a report sample].
+* link:../use/report-delete.html[Delete a report].
 
 
 
