--- a/release-notes/whats-new.adoc
+++ b/release-notes/whats-new.adoc
@@ -14,6 +14,11 @@ summary: With the new BlueXP migration reports service, you can quickly identify
 Learn what’s new in BlueXP migration reports.
 
 //tag::whats-new[]
+== 03 September 2023 
+The updated BlueXP migration reports service provides updates to the report data. Reports now include allocated capacity. 
+
+
+
 == 02 June 2023 
 
 With the new BlueXP migration reports service, you can quickly identify the number of files, directories, symbolic links, hard links, depth and breadth of file system trees, largest files, and more in your storage landscape. 
