--- a/use/report-create.adoc
+++ b/use/report-create.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: use/report-create.html
 keywords: BlueXP migration reports, volume reports
-summary: With the BlueXP migration reports service, you can quickly identify the number of files, directories, symbolic links, hard links, depth and breadth of file system trees, largest files, and more in your storage landscape.
+summary: With the BlueXP migration reports service, you can create a volumes report that shows the number of files, files in directories, symbolic links, hard links, largest file sizes, and more. 
 ---
 
 = Create a report
