--- a/release-notes/whats-new.adoc
+++ b/release-notes/whats-new.adoc
@@ -15,9 +15,13 @@ Learn what's new in BlueXP migration reports.
 
 //tag::whats-new[]
 
-== 13 November 2023
+
+
+== 12 November 2023
 
 You can now create reports for volumes that use the SMB/CIFS protocol. 
+
+link:https://docs.netapp.com/us-en/bluexp-reports/get-started/intro.html[Learn more about BlueXP migration reports]. 
 
 == 03 September 2023
 
